public/stylesheets/style.css
/* Color definitions. Taken from boostrap scheme:  */
:root { 
  --color-bg: #f7f7f7;
  --color-fg: #292b2c;
  --color-select: #6c757d;
  --color-red: #dc3545;
  --color-green: #28a745;
  --color-blue: #007bff;
}

body {
  margin: 0;
  padding: 0;
  background-color: var(--color-bg);
  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
  color: var(--color-fg);
  text-align: center;
}

nav {
  text-align: left;
  background-color: var(--color-fg);
  color: var(--color-bg);
  padding: 20px 20px;
}

#logo {
  font-size: 22px;
  font-family: Oswald;
}

#logo > span {
  font-family: Caveat;
  color: var(--color-blue);
  font-size: 28px;
}

img {
  max-width: 100%;
}

a {
  color: #00B7FF;
}

input {
  border: none;
  color: var(--color-bg);
  background-color: var(--color-blue);
  margin: 3% 2%;
  font-size: 20px;
  padding: 3px 12px;
  border: 1px solid var(--color-select);
  transition: background-color 0.5s ease;
}

input:hover {
  color: var(--color-fg);
  background-color: var(--color-bg);
  border: 1px solid var(--color-fg);
}

#transcript {
  text-align: center;
}

#transcript p {
  display: inline-block;
  background-color: var(--color-select);
  border: 1px solid var(--color-fg);
  margin: 0 0;
  text-align: left;
  padding: 10px 10px;
  font-family: 'Courier New', Courier, monospace;
  width: 60%;
  color: var(--color-bg);
}

@media only screen and (max-width: 1000px) {
  body {
    padding: 0 0;
  }

  #transcript p {
    width: 90%;
  }
}

